<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="50"
    android:orientation="vertical"
    tools:context="de.hwr_berlin.quizapp.activities.fragments.MainLegalFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/legal_header"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textAllCaps="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#FFFFFF" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/legal_library_1_title"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/legal_library_1_short"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/legal_library_1_text"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/legal_library_2_title"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/legal_library_2_short"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/legal_library_2_text"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/legal_library_3_title"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/legal_library_3_short"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/legal_library_3_text"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/legal_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/legal_creators"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
